# useProxy

./: .gitignore  Cargo.toml  README.md  config.example.json  install-web.ps1  install.ps1  package-lock.json  package.json
public/: logs.html  test-cors.html
release/: useproxy.ps1
scripts/: generate_cert.ps1  generate_cert.rs
src/: cert.rs  cli.rs  main.rs
src/config/: mod.rs
src/logger/: api.rs  mod.rs
src/proxy/: cors.rs  mod.rs  static_files.rs
