[package]
name = "useproxy"
version = "0.1.0"
edition = "2021"
default-run = "useproxy"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.2", features = ["full", "http1", "client"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6"
http-body-util = "0.1"
axum = { version = "0.7", features = ["http1"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
axum-server = { version = "0.6", features = ["tls-rustls"] }
ring = "0.17"
rustls-native-certs = "0.7"
rcgen = "0.12"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies.tauri]
version = "1.5"
features = ["shell-open"] 